--- a/css/app.css
+++ b/css/app.css
@@ -6,60 +6,26 @@
         width: 1300px;
         height: auto;
     }
-    /* The nav bar */
-    
-/*
-    .menu {
-        list-style: none;
-        margin: 0;
-        padding-top: 2%;
-        width: 100%;
-        height: 120px;
-        margin: auto;
-        position: relative;
-        background-color: #2c3e50;
-        z-index: 7;
-    }
-*/
-    
-/*
-    .menu li {
-        float: left;
-        width: 20%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    
-*/
-/*
-    .menu a {
-        display: block;
-        width: 100%;
-        height: 100%;
 
-        justify-content: center;
- align-items: center;
 
-        color: #fff;
-        text-decoration: none;
-        position: relative;
-        font-size: 18px;
-        z-index: 9;
-    }
-*/
-    
-/*
-    .menu li:hover,
-    .menu li:focus,
-    .menu li:active {
-*/
-        /*
-        width: 25%;
-        height: 100%;
-*/
-/*
 
+/*color:#70002B*/
+
+
+/* ------------------------------------------
+  RESPONSIVE NAV STYLES
+--------------------------------------------- */
+
+a:active,
+a:hover {
+  outline: 0;
+}
+
+@-webkit-viewport { width: device-width; }
+@-moz-viewport { width: device-width; }
+@-ms-viewport { width: device-width; }
+@-o-viewport { width: device-width; }
+@viewport { width: device-width; }
 
 
 /* ------------------------------------------
@@ -117,8 +83,16 @@
     display: none;
   }
 }
+/* ------------------------------------------
+  FIXED HEADER
+--------------------------------------------- */
 
+.nav-bar {
+
+width: 100%;
+    height: 100px;
     
+}
 
 header {
   background: #f4421a;
@@ -138,6 +112,7 @@ header {
   color: #fff;
   float: left;
 }
+
 
 /* ------------------------------------------
   MASK
@@ -303,7 +278,9 @@ header {
   font-size: 24px;
   content: "\78"; /* Close icon */
 }
-*/
+
+
+
     /*End Navbar*/
     
     .fullwidth {
@@ -325,70 +302,39 @@ header {
         color: #fff;
         font-family: "Montserrat", sans-serif;
     }
-    
-    .mouse {
-        display: block;
-        margin: 0 auto;
-        width: 3.5%;
-        height: 8%;
-        border-radius: 40%;
-        border: 2px solid whitesmoke;
-        position: absolute;
-        top: 95%;
-        position: absolute;
-        left: 50%;
-        margin-left: -26px;
-    }
-    
-    .mouse span {
-        display: block;
-        margin: 6px auto;
-        width: 2px;
-        height: 2px;
-        border-radius: 4px;
-        background: whitesmoke;
-        border: 1px solid transparent;
-        -webkit-animation-duration: 1s;
-        animation-duration: 1s;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
-        -webkit-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
-        -webkit-animation-name: scroll;
-        animation-name: scroll;
-    }
-    
-    @-webkit-keyframes scroll {
-        0% {
-            opacity: 1;
-            -webkit-transform: translateY(0);
-            transform: translateY(0);
-        }
-        100% {
-            opacity: 0;
-            -webkit-transform: translateY(20px);
-            transform: translateY(20px);
-        }
-    }
-    
-    @keyframes scroll {
-        0% {
-            opacity: 1;
-            -webkit-transform: translateY(0);
-            -ms-transform: translateY(0);
-            transform: translateY(0);
-        }
-        100% {
-            opacity: 0;
-            -webkit-transform: translateY(20px);
-            -ms-transform: translateY(20px);
-            transform: translateY(20px);
-        }
-    }
+    /* the overlay on big cover image */
+
+.overlay {
+    position: absolute;
+/*
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+*/
+    background-color: rgba(0, 0, 0, 0.67);
+    z-index: 10;
+    text-align: center;
+    width: 100%;
+    height: 800px;
+
+}
+
     /********
 ******888The End Menu*/
+
+
+
+
+
     /*second row About me */
     
+
+
+
+
+
+
     .two {
         width: 100%;
         height: auto;
