--- a/css/app.css
+++ b/css/app.css
@@ -90,12 +90,11 @@ a:hover {
 .nav-bar {
 
 width: 100%;
-    height: 100px;
+    height: 150px;
     
 }
 
 header {
-  background: #f4421a;
   position: fixed;
   z-index: 3;
   width: 100%;
@@ -104,15 +103,14 @@ header {
 }
 
 .logo {
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  text-decoration: none;
-  font-weight: bold;
-  line-height: 55px;
+/*  -webkit-tap-highlight-color: rgba(0,0,0,0);*/
+/*  text-decoration: none;*/
+/*  font-weight: bold;*/
+  line-height: 50px;
   padding: 0 20px;
-  color: #fff;
-  float: left;
-}
 
+
+}
 
 /* ------------------------------------------
   MASK
@@ -173,7 +171,8 @@ header {
 .nav-collapse ul {
   list-style: none;
   width: 100%;
-  float: left;
+   float: left;
+
 }
 
 @media screen and (min-width: 40em) {
@@ -198,7 +197,6 @@ header {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   border-top: 1px solid white;
   text-decoration: none;
-  background: #f4421a;
   padding: 0.7em 1em;
   color: #fff;
   width: 100%;
@@ -207,12 +205,17 @@ header {
 
 .nav-collapse a:active,
 .nav-collapse .active a {
-  background: #b73214;
+ color:  #F80853;
+}
+
+.nav-collapse a:hover {
+ color:  #F80853;
+
 }
 
 @media screen and (min-width: 40em) {
   .nav-collapse a {
-    border-left: 1px solid white;
+/*    border-left: 1px solid white;*/
     padding: 1.02em 2em;
     text-align: center;
     border-top: 0;
@@ -221,8 +224,7 @@ header {
   }
 }
 
-.nav-collapse ul ul a {
-  background: #ca3716;
+.nav-collapse ul  a {
   padding-left: 2em;
 }
 
@@ -320,6 +322,17 @@ header {
 
 }
 
+
+.intro {
+text-transform: uppercase;
+    padding-top: 30%;
+    font-size: 3em;
+}
+.intro  span{
+
+font-size: 1em;
+    color: #F80853;
+}
     /********
 ******888The End Menu*/
 
@@ -385,12 +398,8 @@ header {
         transform-origin: bottom right;
         z-index: -999;
     }
-    /*
-.overlay {
-    z-index: 1;
-    background-color: black;
-}
-*/
+
+
     
     .about h1 {
         z-index: 2;
