--- a/css/app.css
+++ b/css/app.css
@@ -90,9 +90,13 @@ a:hover {
 .nav-bar {
 
 width: 100%;
-    height: 150px;
+/*    height: 150px;*/
+
+
     
 }
+
+
 
 header {
   position: fixed;
@@ -100,7 +104,13 @@ header {
   width: 100%;
   left: 0;
   top: 0;
+
+
+
 }
+
+
+
 
 .logo {
 /*  -webkit-tap-highlight-color: rgba(0,0,0,0);*/
@@ -366,6 +376,7 @@ font-size: 1em;
         text-shadow: 0 -3px 0 #333, 0 6px 8px rgba(0, 0, 0, .4), 0 9px 10px rgba(0, 0, 0, .15), 0 30px 10px rgba(0, 0, 0, .18), 0 15px 10px rgba(0, 0, 0, .21);
     }
     
+/*
     #box {
         background-color: rgb(224, 1, 103);
         width: 90%;
@@ -399,6 +410,7 @@ font-size: 1em;
         z-index: -999;
     }
 
+*/
 
     
     .about h1 {
